--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-minimal
 
 title: " "
 description: A machine learning company
-logo: https://www.iddo.ro/logo2.png
+logo: logo2.png
